# wordle

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: harbor-publish.yml  public-deploy.yml
data/: 5-letter-words.txt  words.txt
docs/: blogpost.md  spec.md  standards.md
reports/: summary.json
reports/mode-a/: report.md  results.json  summary.json
reports/mode-b/: report.md  results.json  summary.json
reports/mode-c/: report.md  results.json  summary.json
scripts/: build_docker.sh  build_wordlist.py  bump_version.sh  check_dataset_consistency.py  deploy_pipeline.sh  deploy_remote.sh  generate_changelog.sh  minimax_solver.py  mode_c_explore.py  optimal_mode_c.py  optimize_mode_c.py  postdeploy_validate.sh  precompute_crate.py  precompute_mode_c.py  precompute_mode_c_t3.py  predeploy_check.sh  push_harbor.sh  push_harbor_arm64.sh  release.sh  run_slow_tests.sh  run_tests.sh  upload_image.sh
src/wordle/: __init__.py  constants.py  data.py  engine.py  errors.py  game.py  main.py  service.py
src/wordle/api/: app.py  schemas.py
src/wordle/batch/: __init__.py  metrics.py  report.py  runner.py
src/wordle/solver/: constraints.py  strategy.py
static/: app.css  app.js  changelog.html  faqs.html  index.html  privacy.html  site.js  terms.html
tests/: test_api.py  test_batch.py  test_dataset_consistency.py  test_engine.py  test_game_states.py  test_hail_mary.py  test_solver.py
